--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/pg": "^8.11.10",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.17",
     "drizzle-kit": "^0.25.0",
     "tsx": "^4.19.1"
   },
@@ -12,8 +14,13 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.34.1",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0"
   }
 }
