--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@types/pg": "^8.11.10",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/bcrypt": "5.0.2",
+    "@types/jsonwebtoken": "9.0.7",
     "drizzle-kit": "^0.25.0",
     "tsx": "^4.19.1"
   },
@@ -14,7 +16,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
