--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "drizzle-orm": "^0.34.1",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.7",
     "pg": "^8.13.0"
   }
 }
