--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/express": "^4.17.17",
     "@types/bcrypt": "5.0.2",
     "@types/jsonwebtoken": "9.0.7",
+    "@types/cookie-parser": "^1.4.7",
     "drizzle-kit": "^0.25.0",
     "tsx": "^4.19.1"
   },
@@ -18,6 +19,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.34.1",
